fix: removed offset of shadow to improve visibility in stacked view

--- a/src/app/dashboard/summary/summary.component.scss
+++ b/src/app/dashboard/summary/summary.component.scss
@@ -13,7 +13,7 @@
         box-shadow: 0 0px 0px white !important;
     }
     &.selected {
-        box-shadow: 0 5px 15px rgba(158, 158, 158, 0.5) !important;
+        box-shadow: 0 0 20px rgba(158, 158, 158, 0.5) !important;
     }
 }
 
@@ -28,7 +28,7 @@
 .big_number  {
     pointer-events: none;
     :hover  {
-        box-shadow: 0 5px 15px rgba(158, 158, 158, 0.3);
+        box-shadow: 0 0 20px rgba(158, 158, 158, 0.3);
         cursor: pointer;
     }
 }   
